# bevy_pocketbase

./: Cargo.toml  README.md
bevy_pocketbase/: Cargo.toml
bevy_pocketbase/examples/: client.rs
bevy_pocketbase/src/: events.rs  lib.rs  state.rs
ehttp_pocketbase/: Cargo.toml
ehttp_pocketbase/examples/: simple.rs
ehttp_pocketbase/src/: auth.rs  client.rs  collections.rs  lib.rs  requester.rs
