[package]
name = "bevy_pocketbase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", default-features = false, features = ["multi-threaded"] }
ehttp = { version = "0.4.0", features = ["native-async"] }
futures-lite = "2.2.0"
ehttp_pocketbase = {path = "../ehttp_pocketbase"}
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
bevy_http_client = { git = "https://github.com/Leinnan/bevy_http_client", version = "0.3.0" }