[package]
name = "ehttp_pocketbase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ehttp = { version = "0.4.0", features = ["native-async"] }
url = "2.3.1"
futures-lite = "2.2.0"
